Move items to /v[Version]/ instead of /v[Version]/jplaw/

--- a/.github/workflows/python-documentation.yml
+++ b/.github/workflows/python-documentation.yml
@@ -36,6 +36,8 @@ jobs:
       run: |
         mkdir -p docs/v${{ env.VERSION }}
         python -m pydoc -html -o docs/v${{ env.VERSION }}
+        mv docs/v${{ env.VERSION }}/jplaw/* docs/v${{ env.VERSION }}/
+        rm -r docs/v${{ env.VERSION }}/jplaw/
         python ./scripts/update_versions.py
     - name: Commit files
       run: |
