Fix typo pydoc instead of pdoc, missing package

--- a/.github/workflows/python-documentation.yml
+++ b/.github/workflows/python-documentation.yml
@@ -36,7 +36,7 @@ jobs:
     - name: Generate Documentation
       run: |
         rm -rf docs/v${{ env.VERSION }}
-        python -m pydoc -html -o docs/v${{ env.VERSION }}
+        python -m pdoc --html -o docs/v${{ env.VERSION }} jplaw
         mv docs/v${{ env.VERSION }}/jplaw/* docs/v${{ env.VERSION }}/
         rm -r docs/v${{ env.VERSION }}/jplaw/
         python ./scripts/update_versions.py
