--- a/.github/workflows/python-documentation.yml
+++ b/.github/workflows/python-documentation.yml
@@ -8,30 +8,49 @@ on:
 jobs:
   generate_documentation:
     runs-on: ubuntu-latest
+    env: 
+      CI_COMMIT_MESSAGE: Continuous Integration Build Artifacts
+      CI_COMMIT_AUTHOR: ${{ github.event.repository.name }} Continuous Integration
     strategy:
         fail-fast: false
         matrix:
-          python-version: ["3.8", "3.9", "3.10"]
+          python-version: ["3.10"]
     steps:
     - uses: actions/checkout@v3
+      with:
+        # https://joht.github.io/johtizen/build/2022/01/20/github-actions-push-into-repository.html#adapt-checkout
+        ref: ${{ github.event.pull_request.head.ref }}
+        token: ${{ secrets.WORKFLOW_GIT_ACCESS_TOKEN }}
+    - name: Set environment variable "commit-message"
+      run: echo "commit-message=$(git log -1 --pretty=format:'%s')" >> $GITHUB_ENV
+    - name: Set environment variable "commit-author"
+      run: echo "commit-author=$(git log -1 --pretty=format:'%an')" >> $GITHUB_ENV
+    - name: Set environment variable "is-auto-commit"
+      if: env.commit-message == env.CI_COMMIT_MESSAGE && env.commit-author == env.CI_COMMIT_AUTHOR
+      run: echo "is-auto-commit=true" >> $GITHUB_ENV
     - name: Set up Python ${{ matrix.python-version }}
+      if: env.is-auto-commit == false
       uses: actions/setup-python@v3
       with:
         python-version: ${{ matrix.python-version }}
     - name: Install dependencies
+      if: env.is-auto-commit == false
       run: |
         python -m pip install --upgrade pip
         python -m pip install build pdoc3
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Set variables
+      if: env.is-auto-commit == false
       run: |
         VER=$(python setup.py --version)
         echo "VERSION=$VER" >> $GITHUB_ENV
     - name: Build and install
+      if: env.is-auto-commit == false
       run: |
         python -m build
         python -m pip install dist/jplaw-${{ env.VERSION }}.tar.gz
     - name: Generate Documentation
+      if: env.is-auto-commit == false
       run: |
         rm -rf docs/v${{ env.VERSION }}
         python -m pdoc --html -o docs/v${{ env.VERSION }} jplaw
@@ -39,6 +58,7 @@ jobs:
         rm -r docs/v${{ env.VERSION }}/jplaw/
         python ./scripts/update_versions.py
     - name: Commit files
+      if: env.is-auto-commit == false
       run: |
         echo ${{ github.ref }}
         git add .
@@ -46,7 +66,9 @@ jobs:
         git config --local user.name "github-actions[bot]"
         git commit -m "Update Documentation" -a | exit 0
     - name: Push changes
-      if: github.ref == 'refs/heads/main'
-      uses: ad-m/github-push-action@v0.6.0
-      with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
+      if: env.is-auto-commit == false
+      run: |
+        git config --global user.name "${{ env.CI_COMMIT_AUTHOR }}"
+        git config --global user.email "username@users.noreply.github.com"
+        git commit -a -m "${{ env.CI_COMMIT_MESSAGE }}"
+        git push
