--- a/.github/workflows/python-documentation.yml
+++ b/.github/workflows/python-documentation.yml
@@ -39,16 +39,14 @@ jobs:
         python -m pip install --upgrade pip
         python -m pip install build pdoc3
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-    - name: Set variables
-      if: env.is-auto-commit == false
-      run: |
-        VER=$(python scripts/getversion.py)
-        echo "VERSION=$VER" >> $GITHUB_ENV
     - name: Build and install
       if: env.is-auto-commit == false
       run: |
-        python -m build
-        python -m pip install dist/jplaw-${{ env.VERSION }}.tar.gz
+        VERSION_STR=$(python -m build)
+        FILE=$(echo $VERSION_STR | grep -oh -E '(jplaw-[0-9].[0-9].[0-9]).tar.gz')
+        VER=$(echo $FILE | grep -oh -E '([0-9].[0-9].[0-9])')
+        echo "VERSION=$VER" >> $GITHUB_ENV
+        python -m pip install "dist/$FILE"
     - name: Generate Documentation
       if: env.is-auto-commit == false
       run: |
