--- a/.github/workflows/python-documentation.yml
+++ b/.github/workflows/python-documentation.yml
@@ -37,7 +37,7 @@ jobs:
       if: env.is-auto-commit == false
       run: |
         python -m pip install --upgrade pip
-        python -m pip install build pdoc3
+        python -m pip install build pdoc3 requests setuptools
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Build and install
       if: env.is-auto-commit == false
