--- a/.github/workflows/python-documentation.yml
+++ b/.github/workflows/python-documentation.yml
@@ -60,5 +60,6 @@ jobs:
       run: |
         git config --global user.name "${{ env.CI_COMMIT_AUTHOR }}"
         git config --global user.email "username@users.noreply.github.com"
+        git add .
         git commit -a -m "${{ env.CI_COMMIT_MESSAGE }}"
         git push
