--- a/.github/workflows/python-documentation.yml
+++ b/.github/workflows/python-documentation.yml
@@ -37,7 +37,7 @@ jobs:
       if: env.is-auto-commit == false
       run: |
         python -m pip install --upgrade pip
-        python -m pip install build pdoc3
+        python -m pip install build pdoc3 requests setuptools
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Build and install
       if: env.is-auto-commit == false
@@ -60,5 +60,6 @@ jobs:
       run: |
         git config --global user.name "${{ env.CI_COMMIT_AUTHOR }}"
         git config --global user.email "username@users.noreply.github.com"
+        git add .
         git commit -a -m "${{ env.CI_COMMIT_MESSAGE }}"
         git push
