Fix version regex in documentation workflow
Regex for matching version was broken for non-single digit versions. New regex string properly matches version fragments.

--- a/.github/workflows/python-documentation.yml
+++ b/.github/workflows/python-documentation.yml
@@ -43,8 +43,8 @@ jobs:
       if: env.is-auto-commit == false
       run: |
         VERSION_STR=$(python -m build)
-        FILE=$(echo $VERSION_STR | grep -oh -E '(jplaw-[0-9].[0-9].[0-9]).tar.gz')
-        VER=$(echo $FILE | grep -oh -E '([0-9].[0-9].[0-9])')
+        FILE=$(echo $VERSION_STR | grep -oh -E '(jplaw-[0-9]*.[0-9]*.[0-9]*).tar.gz')
+        VER=$(echo $FILE | grep -oh -E '([0-9]*.[0-9]*.[0-9]*)')
         echo "VERSION=$VER" >> $GITHUB_ENV
         python -m pip install "dist/$FILE"
     - name: Generate Documentation
