--- a/.github/workflows/python-documentation.yml
+++ b/.github/workflows/python-documentation.yml
@@ -44,7 +44,7 @@ jobs:
       run: |
         VERSION_STR=$(python -m build)
         FILE=$(echo $VERSION_STR | grep -oh -E '(jplaw-[0-9]*.[0-9]*.[0-9]*).tar.gz')
-        VER=$(echo $FILE | grep -oh -E '([0-9]*.[0-9]*.[0-9]*)')
+        VER=$(echo $FILE | grep -oh -E '([0-9].[0-9]*.[0-9]*)')
         echo $FILE
         echo $VER
         echo "VERSION=$VER" >> $GITHUB_ENV
